--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <!-- make it screen responsive  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSE457: Assignment 3 - Vraj Patel</title>
+  <title>ML Sentiment Analysis | English Fairytales</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <link
     href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -18,7 +20,6 @@
 </head>
 
 <body>
-  <h2 class="info">Name: Vraj Patel; E-Mail: p.vraj@wustl.edu; UID: 501699</h2>
   <h1 class="title">Once Upon a Time...</h1>
   <h2 class="subtitle"> ~ a look into the emotional tone of English fairytales</h2>
 
