--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <!-- make it screen responsive  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ML Sentiment Analysis | English Fairytales</title>
+  <title>Fairytales | ML Sentiment Analysis</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
   <h1 class="title">Once Upon a Time...</h1>
-  <h2 class="subtitle"> ~ a look into the emotional tone of English fairytales</h2>
+  <h2 class="subtitle"> ~ a look into the emotional tone of fairytales</h2>
 
   <div id="books-display"></div>
 
